--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ default_asides: [asides/recent_posts.html, asides/googleplus.html]
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: SevInf
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -93,7 +93,7 @@ disqus_short_name: sevinf
 disqus_show_comment_count: false
 
 # Google Analytics
-#google_analytics_tracking_id: UA-35185157-1
+google_analytics_tracking_id: UA-35185157-1
 
 # Facebook Like
 facebook_like: true
