Reconfigure deploy config

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://SevInf.github.com
+url: http://SevInf.github.io
 title: Harmless Programmer
 subtitle: Just one more programming blog.
 author: Sergej Tatarincev
